force-app/main/default/objects/Replacement_Support__c/Replacement_Support__c.object-meta.xml
<CustomObject>
    <label>Replacement Support</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Replacement Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReplacementSupport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>