force-app/main/default/objects/Replacement_Support__c/fields/Source_Replacement_Category__c.field-meta.xml
<CustomField>
    <fullName>Source_Replacement_Category__c</fullName>
    <label>Source Replacement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Replacement_Category</valueSetName>
    </valueSet>
</CustomField>