force-app/main/default/objects/Replacement_Support__c/fields/Target_Edition__c.field-meta.xml
<CustomField>
    <fullName>Target_Edition__c</fullName>
    <label>Target Edition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Edition</fullName>
            </value>
            <value>
                <fullName>Complete Edition</fullName>
            </value>
            <value>
                <fullName>Complete Edition Elite</fullName>
            </value>
            <value>
                <fullName>Complete Edition Pro</fullName>
            </value>
            <value>
                <fullName>Edition Upgrade</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Foundation Edition</fullName>
            </value>
            <value>
                <fullName>Proactive Edition</fullName>
            </value>
            <value>
                <fullName>Support Upgrade</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition Upgrade</fullName>
            </value>
            <value>
                <fullName>Business Edition Upgrade</fullName>
            </value>
            <value>
                <fullName>Proactive Edition Upgrade</fullName>
            </value>
            <value>
                <fullName>Foundation Edition Upgrade</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>20GB</fullName>
            </value>
            <value>
                <fullName>5GB</fullName>
            </value>
            <value>
                <fullName>50GB</fullName>
            </value>
            <value>
                <fullName>Professional Edition</fullName>
            </value>
            <value>
                <fullName>Complete Cyber Resilience</fullName>
            </value>
            <value>
                <fullName>Complete Elite</fullName>
                <isActive>false</isActive>
                <label>Complete Elite</label>
            </value>
            <value>
                <fullName>Complete Pro</fullName>
                <isActive>false</isActive>
                <label>Complete Pro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>