force-app/main/default/objects/Replacement_Support__c/recordTypes/Replacement_Category_Matrix.recordType-meta.xml
<RecordType>
    <fullName>Replacement_Category_Matrix</fullName>
    <active>true</active>
    <label>Replacement Category Matrix</label>
</RecordType>