force-app/main/default/objects/Replacement_Support__c/recordTypes/Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Upgrade</fullName>
    <active>true</active>
    <label>Upgrade</label>
</RecordType>